--- a/index.css
+++ b/index.css
@@ -1,41 +1,32 @@
-body{
-    margin:0;
+body {
+  margin: 0;
 }
-.service-container{
- 
- 
+.service-container {
 }
-.image{
-    width:100%;
-    height:30vh;
-    margin:0;
+.image {
+  width: 60%;
+  height: 60%;
+  margin: 0;
 }
-.img{
-   width:300px;
-   height:200px;
- 
+.para{
+    font-size:2rem;
 }
-   
-    
+.head{
+    font-size: 2.5rem;
+    text-align: center;
+}
 
-#header{
-  
-    top:0;
+#header {
+  top: 0;
 }
-.nav-container{
-    display:flex;
-    justify-content:space-around;
-    gap:2rem;
-    flex-direction:row;
-    padding:1rem;
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+  flex-direction: row;
+  padding: 1rem;
 }
-a{
-    text-decoration:none;
- 
+a {
+  text-decoration: none;
 }
-a:link{
-    color:blue;
-}
-a:hover{
-    color:red;
-}
+
