--- a/index.css
+++ b/index.css
@@ -4,11 +4,9 @@ body {
 }
 #header {
   position: absolute;
- display:flex;
-left:5%;
+  display: flex;
+  left: 5%;
   z-index: 99;
-
-
 }
 
 .nav-container {
@@ -17,55 +15,46 @@ left:5%;
   gap: 2rem;
   flex-direction: row;
   padding: 1rem;
-
-
 }
-.image-header{
-width:30%;
-
- 
+.image-header {
+  width: 30%;
 }
-.logos{
-  padding:3rem;
+.logos {
+  padding: 3rem;
 }
-.image-logo{
-  width:100%;
-
+.image-logo {
+  width: 100%;
 }
 a {
   text-decoration: none;
-  color:white;
+  color: white;
 }
 
-.items{
+.items {
   font-size: 1.5rem;
- 
 }
 
 .marketing {
-display:flex;
-
+  display: flex;
 }
-.digital-image{
-  width:60%;
+.digital-image {
+  width: 60%;
   margin-left: 3rem;
   border-radius: 10px;
 }
-.digital-text{
-  font-size:1.7rem;
-  width:60%;
+.digital-text {
+  font-size: 1.7rem;
+  width: 60%;
   margin-top: 1rem;
 }
-.digital{
-  position:relative;
-  top:37rem;
-  left:10%;
+.digital {
+  position: relative;
+  top: 37rem;
+  left: 10%;
   /* padding-bottom: 50rem; */
-
 }
-.digital-head{
+.digital-head {
   font-size: 3rem;
-
 }
 .image {
   width: 60%;
@@ -77,7 +66,15 @@ display:flex;
   height: 80px;
   border: none;
   border-radius: 10px;
-  background: linear-gradient(to right,#77530a,#ffd277,#77530a,#77530a,#ffd277,#77530a);
+  background: linear-gradient(
+    to right,
+    #77530a,
+    #ffd277,
+    #77530a,
+    #77530a,
+    #ffd277,
+    #77530a
+  );
   background-size: 250%;
   background-position: left;
   color: #ffd277;
@@ -88,7 +85,6 @@ display:flex;
   cursor: pointer;
   transition-duration: 1s;
   overflow: hidden;
-
 }
 
 .Btn::before {
@@ -119,80 +115,92 @@ display:flex;
 .Btn:active {
   transform: scale(0.95);
 }
-.button{
-  padding:2rem;
+.button {
+  padding: 2rem;
   /* font-size: 5rem; */
 }
-.social{
-  position:relative;
-  top:37rem;
-  padding-bottom:50rem;
-  width:90%;
-  left:3rem;
-
+.social {
+  position: relative;
+  top: 37rem;
+  padding-bottom: 50rem;
+  width: 90%;
+  left: 3rem;
 }
-.social-div{
-  display:flex;
-  /* justify-content: space-around; */
+.social-div {
+  display: flex;
   flex-direction: row-reverse;
-  gap:2rem;
+  gap: 2rem;
 }
-.social-image-div{
-  width:60%;
-  
-
+.social-image-div {
+  width: 60%;
 }
-.social-image{
-  width:100%;
+.social-image {
+  width: 100%;
   border-radius: 10px;
 }
-.social-text{
-  font-size:1.5rem;
-  width:30%;
+.social-text {
+  font-size: 1.5rem;
+  width: 30%;
   margin-top: 1.5rem;
 }
-.para{
-    font-size:2rem;
+.content{
+  position:relative;
+ padding-bottom:10rem;
+
 }
-.head{
-    font-size: 2.5rem;
-    text-align: center;
+.content-div{
+  display:flex;
+
+}
+.content-heading{
+  font-size: 1.7rem;
+  width: 30%;
+  margin-left: 2rem;
 }
 
+.content-image{
+  width: 100%;
+  margin: 0;
+  border-radius: 10px;
+}
+.content-img{
+  width:50%;
+}
+.para {
+  font-size: 2rem;
+}
 
-
+.head {
+  font-size: 2.5rem;
+  text-align: center;
+}
 
 .welcome {
-    background-image: url("./images/001.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    width: 100%;
+  background-image: url("./images/001.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
 }
 
-.welcome-overlay{
-    content: "";
-    background: rgba(0, 0, 0, 0.6);
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    width: 100%;
+.welcome-overlay {
+  content: "";
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100%;
 }
-
-
 
 .welcome2 {
-    position: relative;
-    top: 15rem;
-    z-index: 99;
-    width: 80%;
-    margin: auto;
-    color: white;
+  position: relative;
+  top: 15rem;
+  z-index: 99;
+  width: 80%;
+  margin: auto;
+  color: white;
 }
-
-
-
