--- a/index.css
+++ b/index.css
@@ -11,6 +11,9 @@ body {
 .para {
   font-size: 2rem;
 }
+.text{
+  padding-bottom:4rem;
+}
 .welcome {
   background-image: url("./images/001.jpg");
   background-size: cover;
@@ -126,6 +129,7 @@ a {
 }
 .marketing {
   display: flex;
+  margin-top:-7rem;
 }
 .digital-image {
   width: 60%;
@@ -135,16 +139,17 @@ a {
 .digital-text {
   font-size: 1.7rem;
   width: 60%;
-  margin-top: 1rem;
+  margin-top: 5.6rem;
 }
 .digital {
   position: relative;
-  top: 37rem;
-  left: 10%;
-  /* padding-bottom: 50rem; */
+  top: 30rem;
+  margin-left: 3rem;
+  padding-bottom: 4rem;
 }
 .digital-head {
   font-size: 3rem;
+  /* text-align:right; */
 }
 .image {
   width: 60%;
@@ -153,15 +158,17 @@ a {
 }
 .social {
   position: relative;
-  top: 37rem;
-  padding-bottom: 40rem;
+  top: 30rem;
+  padding-bottom: 24rem;
   width: 90%;
-  left: 3rem;
+  margin-left: 3.5rem;
 }
 .social-div {
   display: flex;
   flex-direction: row-reverse;
   gap: 2rem;
+  margin-top: -8rem;
+
 }
 .social-image-div {
   width: 60%;
@@ -172,21 +179,33 @@ a {
 }
 .social-text {
   font-size: 1.5rem;
-  width: 30%;
-  margin-top: 1.5rem;
+  width: 40%;
+  margin-top: 6rem;
+  margin-right:3rem;
 }
+.social-head {
+  font-size: 3rem;
+  text-align: right;
+  margin-right: 8rem;
+  margin-top: 2rem;
+}
+
 .content {
   position: relative;
-  padding-bottom: 4rem;
-  left: 2rem;
+  padding-bottom: 12rem;
+  margin-left: 1.2rem;
+  top:8rem;
 }
 .content-div {
   display: flex;
+  margin-top:-6rem;
+  
 }
-.content-heading {
+.content-text {
   font-size: 1.7rem;
   width: 30%;
   margin-left: 2rem;
+  margin-top:4rem;
 }
 
 .content-image {
@@ -208,15 +227,16 @@ a {
 
 .branding {
   position: relative;
-
-  padding-bottom: 8rem;
   width: 90%;
-  left: 4rem;
+  margin-left:-4rem;
+  top:-2rem;
+  padding-bottom:10rem;
 }
 .brand-container {
   display: flex;
   flex-direction: row-reverse;
   gap: 2rem;
+  margin-top:-6rem;
 }
 .brand-img-div {
   width: 60%;
@@ -225,30 +245,43 @@ a {
   width: 100%;
   border-radius: 10px;
 }
+
 .branding-text {
   font-size: 1.5rem;
   width: 30%;
-  margin-top: 1.5rem;
+  margin-top: 4rem;
+
 }
 .brand-head {
   font-size: 3rem;
-  text-align: center;
+  text-align: right;
+  margin-right: 10rem;
+ 
+  
 }
+
 .portfolio-section {
   position: relative;
   padding-bottom: 10rem;
-  left: 2rem;
+  top:-3rem;
 }
 .portfolio-div {
   display: flex;
+  margin-top:-7rem;
 }
 .portfolio-text {
   font-size: 1.7rem;
   width: 30%;
   margin-left: 2rem;
+  margin-top:6rem;
 }
 .portfolio-head {
   font-size: 3rem;
+  margin-bottom: 2rem;
+  margin-left: 4rem;
+}
+.portfolio-div {
+  left: 4rem;
 }
 
 .portfolio-image {
@@ -258,4 +291,277 @@ a {
 }
 .portfolio-img {
   width: 50%;
+}
+.successful-section {
+  position: relative;
+  width: 90%;
+  margin-left: -6rem;
+  /* padding-bottom: 2rem; */
+  top:-6rem;
+}
+.successful-text {
+  font-size: 1.5rem;
+  width: 30%;
+  margin-left: 2rem;
+}
+.successful {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.success-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.success-img {
+  width: 60%;
+}
+.case-studies {
+  position: relative;
+  padding-bottom:2rem;
+}
+.case-div {
+  display: flex;
+}
+.case-text {
+  font-size: 1.7rem;
+  width: 30%;
+  margin-left: 2rem;
+}
+.case-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.case-img {
+  width: 50%;
+}
+.case-studies {
+  position: relative;
+  padding-bottom: 10rem;
+}
+.case-text {
+  font-size: 1.5rem;
+  width: 30%;
+}
+.more-info {
+  position: relative;
+  width: 90%;
+  margin-left:-5.5rem;
+  top:-6rem;
+  padding-bottom: 4rem;
+}
+.more-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+}
+.more-img {
+  width: 60%;
+}
+.more-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.more-text {
+  font-size: 1.5rem;
+  width: 30%;
+  margin-top: 1rem;
+}
+.about {
+  position: relative;
+  padding-bottom:2rem;
+  top:-6rem;
+}
+.about-head{
+  font-size: 3rem;
+  margin-bottom: 2rem;
+  margin-left: 4rem;
+}
+.about-us-div {
+  display: flex;
+  margin-top:-6rem;
+}
+.about-text {
+  font-size: 1.7rem;
+  width: 30%;
+  margin-left: 2rem;
+  margin-top:6rem;
+}
+.about-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.about-img {
+  width: 50%;
+}
+
+.at-info {
+  position: relative;
+  width: 90%;
+  margin-left:-5rem;
+  top:-4rem;
+}
+.at-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+}
+.at-img {
+  width: 60%;
+}
+.at-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.at-text {
+  font-size: 1.5rem;
+  width: 30%;
+  margin-top: 1rem;
+}
+.priority {
+  position: relative;
+  padding-bottom: 4rem;
+  margin-left:1.8rem;
+}
+.priority-div {
+  display: flex;
+}
+.priority-text {
+  font-size: 1.7rem;
+  width: 30%;
+  margin-left: 2rem;
+}
+.priority-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.priority-img {
+  width: 50%;
+}
+.great {
+  position: relative;
+  width: 90%;
+  margin-left:-5rem;
+  padding-bottom:2rem;
+}
+.great-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+}
+.great-img {
+  width: 60%;
+}
+.great-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.great-text {
+  font-size: 1.5rem;
+  width: 30%;
+  margin-top: 1rem;
+}
+.future {
+  position: relative;
+  padding-bottom: 2rem;
+}
+.future-div {
+  display: flex;
+}
+.future-text {
+  font-size: 1.7rem;
+  width: 20%;
+  margin-left: 2rem;
+}
+.future-image {
+  width: 100%;
+  margin-left: 2rem;
+  border-radius: 10px;
+}
+.future-img {
+  width: 50%;
+}
+.contacts {
+  position: relative;
+  width: 90%;
+  margin-left:-3.5rem;
+  padding-bottom:4rem;
+}
+.contact-div {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 2rem;
+  margin-top:-8rem;
+}
+.contact-img {
+  width: 60%;
+}
+.contact-heading{
+  font-size: 3rem;
+  text-align:right;
+  margin-right:10rem;
+  /* margin-right:-3rem; */
+}
+.contact-image {
+  width: 100%;
+  border-radius: 10px;
+}
+.contact-text {
+  font-size: 1.5rem;
+  width: 30%;
+  margin-top: 6rem;
+}
+.info-text{
+  font-size: 1.7rem; 
+}
+#name{
+  width:15%;
+  height:0.5rem;
+  padding:0.5rem;
+  border-radius: 10px;
+  font-size:14px;
+  
+}
+.label{
+  font-size:1.5rem;
+}
+#email{
+  width:15%;
+  height:0.5rem;
+  padding:0.5rem;
+  border-radius: 10px;
+  font-size:14px;
+  
+}
+.email{
+  font-size:1.5rem;
+}
+select{
+  width:15%;
+  height:0.8rem;
+  padding:0.8rem;
+  border-radius: 10px;
+  font-size:14px;
+  
+}
+.subject{
+  font-size:1.5rem;
+}
+#textarea{
+  width:20%;
+  height:10rem;
+  padding:0.5rem;
+  border-radius: 10px;
+  font-size:14px;
+  margin-top:2rem;
+  /* margin-left:8rem; */
+ 
+  
+}
+
+.form-section{
+background-color: #262626;
+  text-align:center;
 }
