--- a/index.css
+++ b/index.css
@@ -551,17 +551,36 @@ select{
 }
 #textarea{
   width:20%;
-  height:10rem;
+  height:8rem;
   padding:0.5rem;
   border-radius: 10px;
   font-size:14px;
-  margin-top:2rem;
-  /* margin-left:8rem; */
+  margin-top:1rem;
+  margin-left:1.5rem;
+
  
   
 }
 
 .form-section{
-background-color: #262626;
+background-color: rgba(38, 38, 38, 0.545);
   text-align:center;
+  padding:2rem;
+
+
 }
+.submit-button{
+  padding:1rem;
+  margin-top:1rem;
+  border-radius: 10px;
+  width:10%;
+  font-size:0.95rem;
+  text-align: center;
+ 
+
+}
+button{
+  background-color:#892be22a;
+}
+
+
