--- a/Stylesheets/medium.css
+++ b/Stylesheets/medium.css
@@ -129,64 +129,62 @@
       }
       .marketing {
         display: flex;
+        flex-direction: column;
         margin-top:-7rem;
       }
       .digital-image {
-        width: 60%;
-        margin-left: 3rem;
+        width: 100%;
+     margin-top: 3rem;
         border-radius: 10px;
       }
       .digital-text {
-        font-size: 1.7rem;
-        width: 60%;
+        font-size: 1.9rem;
+        width: 100%;
         margin-top: 5.6rem;
       }
       .digital {
         position: relative;
-        top: 30rem;
+        top: 40rem;
         margin-left: 3rem;
-        padding-bottom: 4rem;
+        padding-bottom: 15rem;
+        width:100%;
       }
       .digital-head {
         font-size: 3rem;
-        /* text-align:right; */
-      }
-      .image {
-        width: 60%;
-        height: 60%;
-        margin: 0;
+        text-align: center;
+       
       }
       .social {
         position: relative;
-        top: 30rem;
+        top: 24rem;
         padding-bottom: 24rem;
-        width: 90%;
+        width: 100%;
         margin-left: 3.5rem;
       }
       .social-div {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         gap: 2rem;
         margin-top: -8rem;
       
       }
       .social-image-div {
-        width: 60%;
+        width: 100%;
       }
       .social-image {
         width: 100%;
         border-radius: 10px;
+        margin-top: 6rem;
       }
       .social-text {
-        font-size: 1.5rem;
-        width: 40%;
-        margin-top: 6rem;
+        font-size: 1.9rem;
+        width: 100%;
+        margin-top: -1.6rem;
         margin-right:3rem;
       }
       .social-head {
         font-size: 3rem;
-        text-align: right;
-        margin-right: 8rem;
+        text-align: center;
         margin-top: 2rem;
       }
       
@@ -194,16 +192,17 @@
         position: relative;
         padding-bottom: 12rem;
         margin-left: 1.2rem;
-        top:8rem;
+        top:-1rem;
       }
       .content-div {
         display: flex;
+        flex-direction: column;
         margin-top:-6rem;
         
       }
       .content-text {
-        font-size: 1.7rem;
-        width: 30%;
+        font-size: 1.9rem;
+        width: 100%;
         margin-left: 2rem;
         margin-top:4rem;
       }
@@ -212,12 +211,13 @@
         width: 100%;
         margin-left: 3rem;
         border-radius: 10px;
+        margin-top: 2rem;
       }
       .content-img {
-        width: 50%;
+        width: 100%;
       }
       .content-head {
-        width: 23%;
+        text-align: center;
       }
       
       .head {
@@ -227,58 +227,57 @@
       
       .branding {
         position: relative;
-        width: 90%;
-        margin-left:-4rem;
-        top:-2rem;
+        width: 100%;
+        margin-left:4rem;
+        top:-14rem;
         padding-bottom:10rem;
       }
       .brand-container {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         gap: 2rem;
         margin-top:-6rem;
       }
       .brand-img-div {
-        width: 60%;
+        width:100%;
       }
       .brand-image {
         width: 100%;
         border-radius: 10px;
+        margin-top: 4rem;
       }
       
       .branding-text {
-        font-size: 1.5rem;
-        width: 30%;
-        margin-top: 4rem;
+        font-size: 1.9rem;
+        width: 95%;
+        margin-top: -1rem;
       
       }
       .brand-head {
         font-size: 3rem;
-        text-align: right;
-        margin-right: 10rem;
-       
-        
+        text-align: center;
       }
       
       .portfolio-section {
         position: relative;
         padding-bottom: 10rem;
-        top:-3rem;
+        top:-18rem;
+        width:100%;
       }
       .portfolio-div {
         display: flex;
+        flex-direction: column;
         margin-top:-7rem;
       }
       .portfolio-text {
-        font-size: 1.7rem;
-        width: 30%;
+        font-size: 1.9rem;
+        width: 95%;
         margin-left: 2rem;
-        margin-top:6rem;
+        margin-top:3rem;
       }
       .portfolio-head {
         font-size: 3rem;
-        margin-bottom: 2rem;
-        margin-left: 4rem;
+        text-align: center;
       }
       .portfolio-div {
         left: 4rem;
@@ -288,32 +287,32 @@
         width: 100%;
         margin-left: 2rem;
         border-radius: 10px;
+        margin-top: 2rem;
       }
       .portfolio-img {
-        width: 50%;
+        width: 100%;
       }
       .successful-section {
         position: relative;
-        width: 90%;
-        margin-left: -6rem;
-        /* padding-bottom: 2rem; */
+        width: 100%;
+        margin-left: 2rem;
         top:-6rem;
       }
       .successful-text {
-        font-size: 1.5rem;
-        width: 30%;
-        margin-left: 2rem;
+        font-size: 1.9rem;
+        width: 100%;
+        margin-left: 4rem;
       }
       .successful {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
       }
       .success-image {
         width: 100%;
         border-radius: 10px;
       }
       .success-img {
-        width: 60%;
+        width: 100%;
       }
       .case-studies {
         position: relative;
@@ -321,10 +320,11 @@
       }
       .case-div {
         display: flex;
+        flex-direction: column;
       }
       .case-text {
-        font-size: 1.7rem;
-        width: 30%;
+        font-size: 1.9rem;
+        width: 100%;
         margin-left: 2rem;
       }
       .case-image {
@@ -333,30 +333,30 @@
         border-radius: 10px;
       }
       .case-img {
-        width: 50%;
+        width: 100%;
       }
       .case-studies {
         position: relative;
         padding-bottom: 10rem;
       }
       .case-text {
-        font-size: 1.5rem;
-        width: 30%;
+        font-size: 1.9rem;
+        width: 100%;
       }
       .more-info {
         position: relative;
-        width: 90%;
+        width: 100%;
         margin-left:-5.5rem;
         top:-6rem;
         padding-bottom: 4rem;
       }
       .more-div {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         gap: 2rem;
       }
       .more-img {
-        width: 60%;
+        width: 100%;
       }
       .more-image {
         width: 100%;
@@ -364,7 +364,7 @@
       }
       .more-text {
         font-size: 1.5rem;
-        width: 30%;
+        width: 100%;
         margin-top: 1rem;
       }
       .about {
@@ -379,11 +379,12 @@
       }
       .about-us-div {
         display: flex;
+        flex-direction: column;
         margin-top:-6rem;
       }
       .about-text {
         font-size: 1.7rem;
-        width: 30%;
+        width: 100%;
         margin-left: 2rem;
         margin-top:6rem;
       }
@@ -398,13 +399,13 @@
       
       .at-info {
         position: relative;
-        width: 90%;
+        width: 100%;
         margin-left:-5rem;
         top:-4rem;
       }
       .at-div {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         gap: 2rem;
       }
       .at-img {
@@ -426,10 +427,11 @@
       }
       .priority-div {
         display: flex;
+        flex-direction: column;
       }
       .priority-text {
         font-size: 1.7rem;
-        width: 30%;
+        width: 100%;
         margin-left: 2rem;
       }
       .priority-image {
@@ -438,7 +440,7 @@
         border-radius: 10px;
       }
       .priority-img {
-        width: 50%;
+        width: 100%;
       }
       .great {
         position: relative;
@@ -448,19 +450,19 @@
       }
       .great-div {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         gap: 2rem;
       }
       .great-img {
-        width: 60%;
+        width: 100%;
       }
       .great-image {
         width: 100%;
         border-radius: 10px;
       }
       .great-text {
-        font-size: 1.5rem;
-        width: 30%;
+        font-size: 1.9rem;
+        width: 100%;
         margin-top: 1rem;
       }
       .future {
@@ -469,10 +471,11 @@
       }
       .future-div {
         display: flex;
+        flex-direction: column;
       }
       .future-text {
-        font-size: 1.7rem;
-        width: 20%;
+        font-size: 1.9rem;
+        width: 100%;
         margin-left: 2rem;
       }
       .future-image {
@@ -485,13 +488,13 @@
       }
       .contacts {
         position: relative;
-        width: 90%;
+        width: 100%;
         margin-left:-3.5rem;
         padding-bottom:4rem;
       }
       .contact-div {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
         gap: 2rem;
         margin-top:-8rem;
       }
@@ -510,7 +513,7 @@
       }
       .contact-text {
         font-size: 1.5rem;
-        width: 30%;
+        width: 100%;
         margin-top: 6rem;
       }
       .info-text{
