--- a/Stylesheets/smaller.css
+++ b/Stylesheets/smaller.css
@@ -1,4 +1,4 @@
-@media (min-width: 295px) and (max-width: 578px) {
+@media (min-width:495px) and (max-width: 578px) {
   body {
     margin: 0;
     overflow-x: hidden;
@@ -10,10 +10,7 @@
     z-index: 99;
   }
   .para {
-    font-size: 2px;
-  }
-  .text {
-    padding-bottom: 1rem;
+    font-size: 2rem;
   }
   .welcome {
     background-image: url("../images/001.jpg");
@@ -22,7 +19,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 20vh;
+    height: 100vh;
     width: 100%;
   }
 
@@ -129,61 +126,61 @@
   }
   .marketing {
     display: flex;
+    flex-direction: column-reverse;
     margin-top: -7rem;
   }
   .digital-image {
-    width: 10%;
-    margin-left: 3rem;
+    width: 100%;
+    margin-top: 5rem;
     border-radius: 10px;
+    margin-left:-1.95rem;
   }
   .digital-text {
-    font-size: 1.7rem;
-    width: 60%;
-    margin-top: 5.6rem;
+    font-size: 1.9rem;
+    width: 100%;
+    margin-top: 2rem;
   }
   .digital {
-    position: inherit;
-    margin-left: 1rem;
-    padding-bottom: 4rem;
+    position: relative;
+    top:37rem;
+    margin-left: 3rem;
+    padding-bottom: 10rem;
+    width: 100%;
   }
   .digital-head {
     font-size: 3rem;
-  }
-  .image {
-    width: 60%;
-    height: 60%;
-    margin: 0;
+    text-align: center;
   }
   .social {
     position: relative;
     top: 30rem;
-    padding-bottom: 24rem;
-    width: 90%;
+    padding-bottom: 4rem;
+    width: 100%;
     margin-left: 3.5rem;
   }
   .social-div {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     gap: 2rem;
     margin-top: -8rem;
   }
   .social-image-div {
-    width: 60%;
+    width: 90%;
   }
   .social-image {
     width: 100%;
     border-radius: 10px;
+    margin-top: 6rem;
   }
   .social-text {
-    font-size: 1.5rem;
-    width: 40%;
-    margin-top: 6rem;
+    font-size: 1.9rem;
+    width: 100%;
+    margin-top: -1.6rem;
     margin-right: 3rem;
   }
   .social-head {
     font-size: 3rem;
-    text-align: right;
-    margin-right: 8rem;
+    text-align: center;
     margin-top: 2rem;
   }
 
@@ -191,87 +188,90 @@
     position: relative;
     padding-bottom: 12rem;
     margin-left: 1.2rem;
-    top: 8rem;
+    top: 28rem;
   }
   .content-div {
     display: flex;
+    flex-direction: column-reverse;
     margin-top: -6rem;
   }
   .content-text {
-    font-size: 1.7rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 100%;
     margin-left: 2rem;
-    margin-top: 4rem;
+    margin-top: 2rem;
   }
 
   .content-image {
     width: 100%;
     margin-left: 3rem;
     border-radius: 10px;
+    margin-top: 6rem;
   }
   .content-img {
-    width: 50%;
+    width: 100%;
   }
   .content-head {
-    width: 23%;
+    text-align: center;
   }
 
   .head {
-    font-size: 2.5rem;
+    font-size: 3rem;
     text-align: center;
   }
 
   .branding {
     position: relative;
-    width: 90%;
-    margin-left: -4rem;
-    top: -2rem;
+    width: 100%;
+    margin-left: 4rem;
+    top: 18rem;
     padding-bottom: 10rem;
   }
   .brand-container {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     gap: 2rem;
     margin-top: -6rem;
   }
   .brand-img-div {
-    width: 60%;
+    width: 100%;
   }
   .brand-image {
     width: 100%;
     border-radius: 10px;
+    margin-top: 4rem;
   }
 
   .branding-text {
-    font-size: 1.5rem;
-    width: 30%;
-    margin-top: 4rem;
+    font-size: 1.9rem;
+    width: 95%;
+    margin-top: -1rem;
   }
   .brand-head {
     font-size: 3rem;
-    text-align: right;
-    margin-right: 10rem;
+    text-align: center;
   }
 
   .portfolio-section {
     position: relative;
+    top: 18rem;
+    width: 100%;
     padding-bottom: 10rem;
-    top: -3rem;
   }
   .portfolio-div {
     display: flex;
+    flex-direction: column-reverse;
     margin-top: -7rem;
   }
   .portfolio-text {
-    font-size: 1.7rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 95%;
     margin-left: 2rem;
-    margin-top: 6rem;
+    margin-top: 3rem;
   }
   .portfolio-head {
     font-size: 3rem;
-    margin-bottom: 2rem;
-    margin-left: 4rem;
+    text-align: center;
   }
   .portfolio-div {
     left: 4rem;
@@ -281,280 +281,306 @@
     width: 100%;
     margin-left: 2rem;
     border-radius: 10px;
+    margin-top: 3rem;
   }
   .portfolio-img {
-    width: 50%;
+    width: 100%;
   }
   .successful-section {
     position: relative;
-    width: 90%;
-    margin-left: -6rem;
-    /* padding-bottom: 2rem; */
-    top: -6rem;
+    width: 100%;
+    margin-left: 2rem;
+    top: 14rem;
   }
   .successful-text {
-    font-size: 1.5rem;
-    width: 30%;
-    margin-left: 2rem;
+    font-size: 1.9rem;
+    width: 100%;
+    margin-left: 1rem;
+    margin-top: -2rem;
   }
   .successful {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
   }
   .success-image {
     width: 100%;
     border-radius: 10px;
+    margin-top: 2rem;
   }
   .success-img {
-    width: 60%;
+    width: 100%;
   }
   .case-studies {
     position: relative;
     padding-bottom: 2rem;
+    top:15rem;
   }
   .case-div {
     display: flex;
+    flex-direction: column;
   }
   .case-text {
-    font-size: 1.7rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 100%;
     margin-left: 2rem;
   }
   .case-image {
     width: 100%;
     margin-left: 2rem;
     border-radius: 10px;
+    margin-top: 2rem;
   }
   .case-img {
-    width: 50%;
+    width: 100%;
   }
   .case-studies {
     position: relative;
     padding-bottom: 10rem;
   }
   .case-text {
-    font-size: 1.5rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 100%;
   }
   .more-info {
     position: relative;
-    width: 90%;
+    width: 100%;
     margin-left: -5.5rem;
-    top: -6rem;
+    top: 8rem;
     padding-bottom: 4rem;
   }
   .more-div {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     gap: 2rem;
   }
   .more-img {
-    width: 60%;
+    width: 100%;
   }
   .more-image {
     width: 100%;
     border-radius: 10px;
+    margin-left: 8rem;
   }
   .more-text {
-    font-size: 1.5rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 100%;
     margin-top: 1rem;
+    margin-left: 8rem;
   }
   .about {
     position: relative;
     padding-bottom: 2rem;
-    top: -6rem;
+    top: 4rem;
   }
   .about-head {
-    font-size: 3rem;
+    font-size: 4rem;
     margin-bottom: 2rem;
     margin-left: 4rem;
+    text-align: center;
   }
   .about-us-div {
     display: flex;
+    flex-direction: column;
     margin-top: -6rem;
   }
   .about-text {
-    font-size: 1.7rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 100%;
     margin-left: 2rem;
     margin-top: 6rem;
   }
   .about-image {
     width: 100%;
-    margin-left: 2rem;
+    margin-left: 3rem;
     border-radius: 10px;
+    margin-top: 2rem;
   }
   .about-img {
-    width: 50%;
+    width: 95%;
   }
 
   .at-info {
     position: relative;
-    width: 90%;
-    margin-left: -5rem;
-    top: -4rem;
+    width: 100%;
+    margin-left: 4rem;
+    top: 4rem;
   }
   .at-div {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     gap: 2rem;
   }
   .at-img {
-    width: 60%;
+    width: 95%;
   }
   .at-image {
     width: 100%;
     border-radius: 10px;
   }
   .at-text {
-    font-size: 1.5rem;
-    width: 30%;
-    margin-top: 1rem;
+    font-size: 1.9rem;
+    width: 100%;
+    margin-top: -1rem;
   }
   .priority {
     position: relative;
     padding-bottom: 4rem;
     margin-left: 1.8rem;
+    top: 8rem;
   }
   .priority-div {
     display: flex;
+    flex-direction: column;
   }
   .priority-text {
-    font-size: 1.7rem;
-    width: 30%;
+    font-size: 1.9rem;
+    width: 100%;
     margin-left: 2rem;
   }
   .priority-image {
     width: 100%;
     margin-left: 2rem;
     border-radius: 10px;
+    margin-top: 2rem;
   }
   .priority-img {
-    width: 50%;
+    width: 100%;
   }
   .great {
     position: relative;
     width: 90%;
-    margin-left: -5rem;
+    margin-left: 4rem;
     padding-bottom: 2rem;
+    top: 10rem;
   }
   .great-div {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     gap: 2rem;
   }
   .great-img {
-    width: 60%;
+    width: 100%;
   }
   .great-image {
     width: 100%;
     border-radius: 10px;
   }
   .great-text {
-    font-size: 1.5rem;
-    width: 30%;
-    margin-top: 1rem;
+    font-size: 1.9rem;
+    width: 100%;
+    margin-top: -2rem;
   }
   .future {
     position: relative;
     padding-bottom: 2rem;
+    top: 14rem;
   }
   .future-div {
     display: flex;
+    flex-direction: column;
   }
   .future-text {
-    font-size: 1.7rem;
-    width: 20%;
+    font-size: 1.9rem;
+    width: 100%;
     margin-left: 2rem;
+    margin-top: -3rem;
   }
   .future-image {
     width: 100%;
     margin-left: 2rem;
     border-radius: 10px;
+    margin-top: 2rem;
   }
   .future-img {
-    width: 50%;
+    width: 95%;
   }
   .contacts {
     position: relative;
-    width: 90%;
+    width: 100%;
     margin-left: -3.5rem;
     padding-bottom: 4rem;
+    top: 10rem;
   }
   .contact-div {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column-reverse;
     gap: 2rem;
     margin-top: -8rem;
   }
   .contact-img {
-    width: 60%;
+    width: 100%;
   }
   .contact-heading {
-    font-size: 3rem;
-    text-align: right;
-    margin-right: 10rem;
-    /* margin-right:-3rem; */
+    font-size: 2.2rem;
+    text-align: center;
+    margin-left: 18rem;
+    padding: 2rem;
   }
   .contact-image {
     width: 100%;
     border-radius: 10px;
+    margin-left: 5rem;
+    margin-top: 4rem;
   }
   .contact-text {
-    font-size: 1.5rem;
-    width: 30%;
-    margin-top: 6rem;
+    font-size: 1.9rem;
+    width: 100%;
+    margin-top: 1rem;
+    margin-left: 5rem;
   }
   .info-text {
-    font-size: 1.7rem;
+    font-size: 2rem;
+    margin-top:rem;
+    margin-left:2rem;
   }
   #name {
-    width: 15%;
-    height: 0.5rem;
+    width: 35%;
+    height: 0.8rem;
     padding: 0.5rem;
     border-radius: 10px;
-    font-size: 14px;
+    font-size: 18px;
   }
   .label {
     font-size: 1.5rem;
   }
   #email {
-    width: 15%;
-    height: 0.5rem;
+    width: 35%;
+    height: 0.8rem;
     padding: 0.5rem;
     border-radius: 10px;
-    font-size: 14px;
+    font-size: 18px;
   }
   .email {
     font-size: 1.5rem;
   }
   select {
-    width: 15%;
-    height: 0.8rem;
+    width: 45%;
+    height: 3rem;
     padding: 0.8rem;
     border-radius: 10px;
     font-size: 14px;
   }
   .subject {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   #textarea {
-    width: 20%;
-    height: 8rem;
+    width: 80%;
+    height: 9rem;
     padding: 0.5rem;
     border-radius: 10px;
-    font-size: 14px;
+    font-size:19px;
     margin-top: 1rem;
     margin-left: 1.5rem;
   }
   .message {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
   }
   .form-section {
     background-color: rgba(38, 38, 38, 0.545);
     text-align: center;
     padding: 2rem;
+    margin-left: 2rem;
+    margin-top: 1.5rem;
   }
   .submit-button {
     padding: 1rem;
@@ -573,16 +599,15 @@
     padding: 1rem;
   }
   .texts {
-    font-size: 0.7rem;
+    font-size: 0.9rem;
     margin-left: 0.5rem;
-    /* color:white; */
   }
   .terms {
     display: flex;
     justify-content: space-around;
   }
   .copy {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     color: white;
   }
   .copyrights {
@@ -591,5 +616,6 @@
   footer {
     background-color: #00000095;
     padding: 2rem;
+    margin-left:2rem;
   }
 }
