updated large,xlarge,medium and index.css

--- a/Stylesheets/medium.css
+++ b/Stylesheets/medium.css
@@ -19,7 +19,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 60vh;
+    height: 80vh;
     width: 100%;
   }
 
@@ -29,7 +29,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    height: 60vh;
+    height: 80vh;
     width: 100%;
   }
 
@@ -127,9 +127,11 @@
   .marketing {
     display: flex;
     flex-direction: column-reverse;
+    margin-top: -7rem;
   }
   .digital-image {
     width: 100%;
+    margin-top: 5rem;
     border-radius: 10px;
     margin-left:-1.95rem;
   }
@@ -140,7 +142,7 @@
   }
   .digital {
     position: relative;
-    top:40rem;
+    top:20rem;
     margin-left: 3rem;
     padding-bottom: 2rem;
     width: 100%;
