--- a/index.css
+++ b/index.css
@@ -574,7 +574,7 @@ footer {
   body {
     margin: 0;
     overflow-x: hidden;
-    background-color: red;
+    /* background-color: red; */
   }
   #header {
     position: relative;
@@ -819,10 +819,10 @@ footer {
     width: 100%;
   }
   .portfolio-text {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     width: 100%;
-    margin-right: 0;
     margin-left: 0;
+    margin-right: 0;
     margin-top: 1rem;
   }
   .portfolio-head {
@@ -894,7 +894,7 @@ footer {
     position: relative;
     width: 100%;
     margin-left: 1rem;
-    top: -6rem;
+    top: -8rem;
     padding-bottom: 2rem;
   }
   .more-div {
@@ -912,7 +912,7 @@ footer {
     margin-right: 0;
   }
   .more-text {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     width: 100%;
     margin-top: 1rem;
     margin-left: 0;
@@ -921,28 +921,31 @@ footer {
   .about {
     position: relative;
     padding-bottom: 2rem;
-    top: 12rem;
+    top: -6rem;
   }
   .about-head {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 2rem;
-    margin-left: 4rem;
+    text-align: center;
+    margin-top: -4rem;
   }
   .about-us-div {
     display: flex;
+    flex-direction: column;
     margin-top: -6rem;
   }
   .about-text {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     width: 100%;
+    margin-top: 4rem;
     margin-left: 0;
     margin-right: 0;
-    margin-top: 4.5rem;
   }
   .about-image {
     width: 100%;
-    margin-left: 2rem;
     border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
   }
   .about-img {
     width: 100%;
@@ -951,12 +954,11 @@ footer {
   .at-info {
     position: relative;
     width: 100%;
-    margin-left: 1rem;
-    top: 11rem;
+    top: -10rem;
   }
   .at-div {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     gap: 2rem;
   }
   .at-img {
@@ -965,38 +967,45 @@ footer {
   .at-image {
     width: 100%;
     border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -2rem;
   }
   .at-text {
-    font-size: 1.5rem;
-    width: 50%;
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
     margin-top: 1rem;
   }
   .priority {
     position: relative;
-    top: 12rem;
+    top: -8rem;
   }
   .priority-div {
     display: flex;
+    flex-direction: column;
   }
   .priority-text {
-    font-size: 1.5rem;
-    width: 50%;
-    margin-left: 1rem;
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -3rem;
   }
   .priority-image {
     width: 100%;
-    margin-left: 2rem;
     border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
   }
   .priority-img {
     width: 100%;
   }
   .great {
     position: relative;
-    top: 13.5rem;
+    top: -8rem;
     width: 100%;
-    margin-left: 1rem;
-    padding-bottom: 2rem;
   }
   .great-div {
     display: flex;
@@ -1009,39 +1018,45 @@ footer {
   .great-image {
     width: 100%;
     border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -2rem;
   }
   .great-text {
-    font-size: 1.5rem;
-    width: 50%;
+    font-size: 1.4rem;
+    width: 100%;
     margin-top: 1rem;
   }
   .future {
     position: relative;
-    top: 13rem;
-    padding-bottom: 3rem;
+    top: -8rem;
+    padding-bottom: 1rem;
   }
   .future-div {
     display: flex;
+    flex-direction: column;
   }
   .future-text {
-    font-size: 1.5rem;
-    width: 50%;
-    margin-left: 1rem;
+    font-size: 1.4rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -1rem;
   }
   .future-image {
     width: 100%;
-    margin-left: 2rem;
     border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
   }
   .future-img {
     width: 100%;
   }
   .contacts {
     position: relative;
-    top: 14rem;
+    top: -8rem;
     width: 100%;
-    margin-left: 1rem;
-    padding-bottom: 13rem;
+    padding-bottom: 1rem;
   }
   .contact-div {
     display: flex;
@@ -1053,26 +1068,36 @@ footer {
     width: 100%;
   }
   .contact-heading1 {
-    font-size: 2rem;
-    text-align: right;
-    margin-right: 10rem;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 1rem;
   }
   .contact-image {
     width: 100%;
     border-radius: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: -2rem;
   }
   .contact-text {
-    font-size: 1.5rem;
-    width: 50%;
+    font-size: 1.4rem;
+    width: 100%;
     margin-top: 6.5rem;
+    margin-left: 0;
+    margin-right: 0;
   }
   .info-text {
-    font-size: 1.5rem;
-    top: 20rem;
-    padding: 2rem;
+    font-size: 1.4rem;
+    width: 100%;
+    margin-top: -10rem;
+    margin-left: 0;
+    margin-right: 0;
   }
+
   #name {
-    width: 20%;
+    width: 100%;
     height: 0.5rem;
     padding: 0.5rem;
     border-radius: 10px;
@@ -1081,8 +1106,9 @@ footer {
   .name {
     font-size: 1.5rem;
   }
+
   #email {
-    width: 25%;
+    width: 100%;
     height: 0.5rem;
     padding: 0.5rem;
     border-radius: 10px;
@@ -1092,7 +1118,7 @@ footer {
     font-size: 1.5rem;
   }
   select {
-    width: 35%;
+    width: 100%;
     height: 0.8rem;
     padding: 0.8rem;
     border-radius: 10px;
@@ -1102,13 +1128,14 @@ footer {
     font-size: 1.5rem;
   }
   #textarea {
-    width: 30%;
+    width: 80%;
     height: 8rem;
     padding: 0.5rem;
     border-radius: 10px;
     font-size: 14px;
     margin-top: 1rem;
-    margin-left: 1.5rem;
+   margin-left:0;
+   margin-right:0;
   }
   .message {
     font-size: 1.6rem;
@@ -1117,13 +1144,13 @@ footer {
     background-color: rgba(38, 38, 38, 0.545);
     text-align: center;
     padding: 2rem;
-    margin-left: 1rem;
+ 
   }
   .submit-button {
     padding: 1rem;
     margin-top: 1rem;
     border-radius: 10px;
-    width: 10%;
+    width: 80%;
     font-size: 0.95rem;
     text-align: center;
   }
@@ -1132,6 +1159,7 @@ footer {
   }
   #icons {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     padding: 1rem;
   }
@@ -1141,14 +1169,20 @@ footer {
   }
   .terms {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
+    margin-left: 0;
+    margin-right:0;
   }
   .copy {
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: white;
   }
   .copyrights {
     height: 3rem;
+    margin-top:-2rem;
+    padding-bottom:2.5rem;
+
   }
   footer {
     background-color: #00000095;
